# Stutter-Journal

./: .env.example  .env.runtime  .gitignore  .sops.yaml  .tmuxp.yaml  LICENSE  README.md  age.agekey  docker-compose.yml  settings.gradle.kts
apps/backend/: .dockerignore  .gitignore  .isort.cfg  AUTHORS.rst  Dockerfile  Dockerfile.migrate  LICENSE.txt  Makefile  README.md  go.mod  go.sum  pyproject.toml  setup.py
apps/backend/cmd/api/: main.go
apps/backend/docs/: conf.py
apps/backend/ent/: analysisjob.go  analysisjob_create.go  analysisjob_delete.go  analysisjob_query.go  analysisjob_update.go  client.go  comment.go  comment_create.go  comment_delete.go  comment_query.go  comment_update.go  doctor.go  doctor_create.go  doctor_delete.go  doctor_query.go  doctor_update.go  doctorpatientlink.go  doctorpatientlink_create.go  doctorpatientlink_delete.go  doctorpatientlink_query.go  doctorpatientlink_update.go  ent.go  entry.go  entry_create.go  entry_delete.go  entry_query.go  entry_update.go  entryshare.go  entryshare_create.go  entryshare_delete.go  entryshare_query.go  entryshare_update.go  mutation.go  pairingcode.go  pairingcode_create.go  pairingcode_delete.go  pairingcode_query.go  pairingcode_update.go  patient.go  patient_create.go  (+10 more)
apps/backend/ent/analysisjob/: analysisjob.go  where.go
apps/backend/ent/comment/: comment.go  where.go
apps/backend/ent/doctor/: doctor.go  where.go
apps/backend/features/: analytics.feature  auth.feature  entries.feature  linking.feature  mydoctor.feature  practice.feature
apps/backend/scripts/: migrate-dev.sh
(+1052 files in other folders)
